<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.file</groupId>
	<artifactId>filorafs-lite</artifactId>
	<version>1.0.0</version>
	<name>FiloraFS-Lite</name>
	<description>BuildBaseKit Spring Boot boilerplate for secure local file storage</description>
	<url>https://buildbasekit.com/boilerplates/filora-fs-lite/</url>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/license/mit</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/buildbasekit/FiloraFS-Lite.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/buildbasekit/FiloraFS-Lite.git</developerConnection>
		<tag/>
		<url>https://github.com/buildbasekit/FiloraFS-Lite</url>
	</scm>
	<properties>
		<java.version>25</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
